added partners-service  section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     />
   </head>
   <body>
-    <section class="header">
+    <!-- header section Start  -->
+    <header>
       <nav class="navbar">
         <div class="logo">Foodies</div>
         <ul class="nav_items">
@@ -31,28 +32,82 @@
           <li><a href="#">Pages</a></li>
         </ul>
       </nav>
-      <section class="hero">
-        <div class="food-title">
-          <div class="foofd-ditails">
-            <h1>We're Serious For Food.</h1>
-            <p>
-              We strive to provide a space where guests can connect with
-              themselves and explore their full potential, offering a safe
-              place.
-            </p>
-            <div class="button">
-              <button>
-                <span>Get Started</span>
-                <i class="fa-solid fa-right-long"></i>
-              </button>
+      <div class="food-title">
+        <div class="food-ditails">
+          <h1>We're Serious For Food.</h1>
+          <p>
+            We strive to provide a space where guests can connect with
+            themselves and explore their full potential, offering a safe place.
+          </p>
+          <div class="button">
+            <button>
+              <span>Get Started</span>
+              <i class="fa-solid fa-right-long"></i>
+            </button>
+          </div>
+        </div>
+        <div class="hero_img">
+          <img src="./Image1.png" alt="image" />
+        </div>
+      </div>
+    </header>
+    <!-- header section End  -->
+    <main>
+      <section class="partners-service">
+        <div class="partner">
+          <img class="pr-12" src="./Photo/Group 1.png" alt="" />
+          <img class="pr-15" src="./Photo/Group 2.png" alt="" />
+          <img class="pr-15" src="./Photo/Group 3.png" alt="" />
+          <img class="pr-15" src="./Photo/Group 7.png" alt="" />
+          <img class="pr-15" src="./Photo/Group 8.png" alt="" />
+        </div>
+        <div class="service">
+          <div class="service-items">
+            <div class="services">
+              <div class="service-logo">
+                <i class="fa-solid fa-truck"></i>
+              </div>
+              <div class="services-ditails">
+                <h3>Free Shipping</h3>
+                <p>Orders over $140</p>
+              </div>
             </div>
           </div>
-          <div class="img-01">
-            <img class="image-1" src="./Image1.png" alt="image" />
+          <div class="service-items">
+            <div class="services">
+              <div class="service-logo">
+                <i class="fa-solid fa-wallet"></i>
+              </div>
+              <div class="services-ditails">
+                <h3>Quick Payment</h3>
+                <p>100% secure payment</p>
+              </div>
+            </div>
+          </div>
+          <div class="service-items">
+            <div class="services">
+              <div class="service-logo">
+                <i class="fa-solid fa-percent"></i>
+              </div>
+              <div class="services-ditails">
+                <h3>Special Promo</h3>
+                <p>Get special promo</p>
+              </div>
+            </div>
+          </div>
+          <div class="service-items">
+            <div class="services">
+              <div class="service-logo">
+                <i class="fa-solid fa-headphones"></i>
+              </div>
+              <div class="services-ditails">
+                <h3>24/7 Support</h3>
+                <p>Ready support</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
-    </section>
-    section.
+    </main>
   </body>
 </html>
