added benefit and our-star section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     </header>
     <!-- header section End  -->
     <main>
+      <!-- Partners Service Start -->
       <section class="partners-service">
         <div class="partner">
           <img class="pr-12" src="./Photo/Group 1.png" alt="" />
@@ -108,6 +109,75 @@
           </div>
         </div>
       </section>
+      <!-- Partners Service End  -->
+
+      <!-- benefit service Start -->
+      <section class="benefit">
+        <div class="our-benefit">
+          <div class="photos-benefit">
+            <img class="photos-benefit1" src="./benefit.png" alt="benefit" />
+          </div>
+          <div class="benefit-ditails">
+            <p>Our Benefit</p>
+            <h1>The More Healthy Food The Better</h1>
+            <div class="service-benefits">
+              <div class="benefit-items">
+                <i class="fa-solid fa-check"></i>
+                <span>It's The Place To Be.</span>
+              </div>
+              <div class="benefit-items">
+                <i class="fa-solid fa-check"></i>
+                <span>Nonstop Veggie Food</span>
+              </div>
+              <div class="benefit-items">
+                <i class="fa-solid fa-check"></i>
+                <span>The Best Silk Dish In Town</span>
+              </div>
+              <div class="benefit-items">
+                <i class="fa-solid fa-check"></i>
+                <span>Truffles, Egg & Pumpkin Spice</span>
+              </div>
+              <div class="benefit-items">
+                <i class="fa-solid fa-check"></i>
+                <span>It's The Place To Be.</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- benefit service End -->
+
+      <!-- star ditails Star  -->
+      <section class="our-star">
+        <div class="star-ditalis">
+          <p>Our Stars</p>
+          <h1>Veggie Food Goes On And Always On</h1>
+          <div class="feedbacks">
+            <div class="feedback">
+              <h1>1,500</h1>
+              <p>Sold Product</p>
+            </div>
+            <div class="feedback">
+              <h1>500</h1>
+              <p>Possitive Feedback</p>
+            </div>
+            <div class="feedback">
+              <h1>400</h1>
+              <p>Official Store</p>
+            </div>
+          </div>
+          <div class="promo-button">
+            <button>
+              Get Special Promo
+              <i class="fa-solid fa-right-long"></i>
+            </button>
+          </div>
+        </div>
+        <div class="star-img">
+          <img src="./Star.png" alt="star" />
+        </div>
+      </section>
+      <!-- star ditails End  -->
     </main>
   </body>
 </html>
