added our-features section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             themselves and explore their full potential, offering a safe place.
           </p>
           <div class="button">
-            <button>
+            <button class="special">
               <span>Get Started</span>
               <i class="fa-solid fa-right-long"></i>
             </button>
@@ -178,6 +178,62 @@
         </div>
       </section>
       <!-- star ditails End  -->
+      <section class="our-features">
+        <div class="features">
+          <div class="feature-titles">
+            <span>Our Features </span>
+            <h1>Variety Of Foods</h1>
+          </div>
+          <div class="veriety-of-food-ditails">
+            <div class="veriety-food-items">
+              <div class="img">
+                <img src="./img 1.png" alt="Carrot" />
+              </div>
+              <div class="verity-ditails">
+                <h2>Veggies Are Forever</h2>
+                <p>We offer the following services</p>
+                <button class="variety-button">
+                  Discover Now
+                  <i class="fa-solid fa-right-long"></i>
+                </button>
+              </div>
+              <div class="img">
+                <img src="./img 2.png" alt="Carrot" />
+              </div>
+              <div class="verity-ditails">
+                <h2>Good For Your Skin</h2>
+                <p>We offer the following services</p>
+                <button class="variety-button">
+                  Discover Now
+                  <i class="fa-solid fa-right-long"></i>
+                </button>
+              </div>
+              <div class="verity-ditails">
+                <h2>Veggie Food Groove</h2>
+                <p>We offer the following services</p>
+                <button class="variety-button">
+                  Discover Now
+                  <i class="fa-solid fa-right-long"></i>
+                </button>
+              </div>
+              <div class="img">
+                <img src="./img 3.png" alt="Carrot" />
+              </div>
+              <div class="verity-ditails">
+                <h2>That Comes Close</h2>
+                <p>We offer the following services</p>
+                <button class="variety-button">
+                  Discover Now
+                  <i class="fa-solid fa-right-long"></i>
+                </button>
+              </div>
+              <div class="img">
+                <img src="./img 4.png" alt="Carrot" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
