added our-features section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
         </div>
       </section>
       <!-- star ditails End  -->
+       <!-- features start -->
       <section class="our-features">
         <div class="features">
           <div class="feature-titles">
@@ -234,6 +235,7 @@
           </div>
         </div>
       </section>
+          <!-- features End -->
     </main>
   </body>
 </html>
