added our-features and popular-product section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
       </section>
       <!-- star ditails End  -->
-       <!-- features start -->
+      <!-- features start -->
       <section class="our-features">
         <div class="features">
           <div class="feature-titles">
@@ -235,7 +235,91 @@
           </div>
         </div>
       </section>
-          <!-- features End -->
+      <!-- features End -->
+      <section class="popular-product">
+        <div class="most-popular">
+          <p>Our Product</p>
+          <h2>Most Popular Product</h2>
+          <div class="product-card">
+            <div class="card mr-30">
+              <img src="./Banana.png" alt="banana" />
+              <div class="star pb-24">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <h3 class="pb-24">Summer Veganie</h3>
+              <div class="price">
+                <span class="price1">$25</span>
+                <span class="price2">$29</span>
+              </div>
+              <button class="product-buy">
+                <span>Boy Now</span>
+                <i class="fa-solid fa-right-long"></i>
+              </button>
+            </div>
+            <div class="card mr-30">
+              <img src="./Banana.png" alt="banana" />
+              <div class="star pb-24">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <h3 class="pb-24">Summer Veganie</h3>
+              <div class="price">
+                <span class="price1">$25</span>
+                <span class="price2">$29</span>
+              </div>
+              <button class="product-buy">
+                <span>Boy Now</span>
+                <i class="fa-solid fa-right-long"></i>
+              </button>
+            </div>
+            <div class="card mr-30">
+              <img src="./Banana.png" alt="banana" />
+              <div class="star pb-24">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <h3 class="pb-24">Summer Veganie</h3>
+              <div class="price">
+                <span class="price1">$25</span>
+                <span class="price2">$29</span>
+              </div>
+              <button class="product-buy">
+                <span>Boy Now</span>
+                <i class="fa-solid fa-right-long"></i>
+              </button>
+            </div>
+            <div class="card">
+              <img src="./Banana.png" alt="banana" />
+              <div class="star pb-24">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <h3 class="pb-24">Summer Veganie</h3>
+              <div class="price">
+                <span class="price1">$25</span>
+                <span class="price2">$29</span>
+              </div>
+              <button class="product-buy">
+                <span>Boy Now</span>
+                <i class="fa-solid fa-right-long"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
