added suggesion section

--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
         </div>
       </section>
       <!-- features End -->
+
+      <!-- popular product start -->
       <section class="popular-product">
         <div class="most-popular">
           <p>Our Product</p>
@@ -318,6 +320,17 @@
               </button>
             </div>
           </div>
+        </div>
+      </section>
+      <!-- popular product End -->
+
+      <section class="suggesion">
+        <div class="suggesed">
+          <h1>Veggie Foods? Ingredients You Want To Try</h1>
+          <button>
+            <span>Get Started</span>
+            <i class="fa-solid fa-right-long"></i>
+          </button>
         </div>
       </section>
     </main>
