--- a/index.html
+++ b/index.html
@@ -334,5 +334,53 @@
         </div>
       </section>
     </main>
+    <section class="bottom">
+      <div class="bottom-bar">
+        <div class="resturent">
+          <h2 class="pd-top">Foodies</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor
+          </p>
+          <div class="icon">
+            <i class="fa-brands fa-facebook-f pr-100"></i>
+            <i class="fa-brands fa-instagram pr-100"></i>
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+        </div>
+        <div class="about-us">
+          <h2 class="pd-top font">About Us</h2>
+          <ul>
+            <li class="pb-space">About Us</li>
+            <li class="pb-space">Service Uss</li>
+            <li class="pb-space">Contact</li>
+            <li>Company</li>
+          </ul>
+        </div>
+        <div class="company">
+          <h2 class="pd-top font">Company</h2>
+          <ul>
+            <li class="pb-space">Partnarship</li>
+            <li class="pb-space">Terms of Use</li>
+            <li class="pb-space">Privacy</li>
+            <li>Sitemap</li>
+          </ul>
+        </div>
+        <div class="email">
+          <h2 class="pd-top font">Get in touch</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor
+          </p>
+          <div class="submit-email">
+            <input type="email" placeholder="Email" />
+            <button>Subscribe</button>
+          </div>
+        </div>
+      </div>
+      <div class="copy">
+        <p>Copyright © 2021 Foodies.</p>
+      </div>
+    </section>
   </body>
 </html>
