added most-popular section

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               </button>
             </div>
             <div class="card mr-30">
-              <img src="./Banana.png" alt="banana" />
+              <img src="./gereiani.png" alt="banana" />
               <div class="star pb-24">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -271,7 +271,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-              <h3 class="pb-24">Summer Veganie</h3>
+              <h3 class="pb-24">Greanie Seafood</h3>
               <div class="price">
                 <span class="price1">$25</span>
                 <span class="price2">$29</span>
@@ -282,7 +282,7 @@
               </button>
             </div>
             <div class="card mr-30">
-              <img src="./Banana.png" alt="banana" />
+              <img src="./Fresh2.png" alt="banana" />
               <div class="star pb-24">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -290,7 +290,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-              <h3 class="pb-24">Summer Veganie</h3>
+              <h3 class="pb-24">Fresh Meatyus</h3>
               <div class="price">
                 <span class="price1">$25</span>
                 <span class="price2">$29</span>
@@ -301,7 +301,7 @@
               </button>
             </div>
             <div class="card">
-              <img src="./Banana.png" alt="banana" />
+              <img src="./Fresh.png" alt="banana" />
               <div class="star pb-24">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -309,7 +309,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-              <h3 class="pb-24">Summer Veganie</h3>
+              <h3 class="pb-24">Fresh Vegetable</h3>
               <div class="price">
                 <span class="price1">$25</span>
                 <span class="price2">$29</span>
