added new section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <li><a href="#">Our Company</a></li>
           <li><a href="#">Pages</a></li>
         </ul>
+        <div class="menu-icon">
+          <i class="fa-solid fa-bars"></i>
+        </div>
       </nav>
       <div class="food-title">
         <div class="food-ditails">
@@ -47,7 +50,7 @@
           </div>
         </div>
         <div class="hero_img">
-          <img src="./Image1.png" alt="image" />
+          <img src="./Photo/Image1.png" alt="image" />
         </div>
       </div>
     </header>
@@ -56,11 +59,11 @@
       <!-- Partners Service Start -->
       <section class="partners-service">
         <div class="partner">
-          <img class="pr-12" src="./Photo/Group 1.png" alt="" />
-          <img class="pr-15" src="./Photo/Group 2.png" alt="" />
-          <img class="pr-15" src="./Photo/Group 3.png" alt="" />
-          <img class="pr-15" src="./Photo/Group 7.png" alt="" />
-          <img class="pr-15" src="./Photo/Group 8.png" alt="" />
+          <img class="pr-15" src="./Photo/Group 1.png" alt="" />
+          <img class="pr-11" src="./Photo/Group 2.png" alt="" />
+          <img class="pr-16" src="./Photo/Group 3.png" alt="" />
+          <img class="pr-1" src="./Photo/Group 7.png" alt="" />
+          <img class="pr-1" src="./Photo/Group 8.png" alt="" />
         </div>
         <div class="service">
           <div class="service-items">
@@ -115,7 +118,11 @@
       <section class="benefit">
         <div class="our-benefit">
           <div class="photos-benefit">
-            <img class="photos-benefit1" src="./benefit.png" alt="benefit" />
+            <img
+              class="photos-benefit1"
+              src="./Photo/benefit.png"
+              alt="benefit"
+            />
           </div>
           <div class="benefit-ditails">
             <p>Our Benefit</p>
@@ -174,7 +181,7 @@
           </div>
         </div>
         <div class="star-img">
-          <img src="./Star.png" alt="star" />
+          <img src="./Photo/Star.png" alt="star" />
         </div>
       </section>
       <!-- star ditails End  -->
@@ -188,7 +195,7 @@
           <div class="veriety-of-food-ditails">
             <div class="veriety-food-items">
               <div class="img">
-                <img src="./img 1.png" alt="Carrot" />
+                <img src="./Photo/img 1.png" alt="Carrot" />
               </div>
               <div class="verity-ditails">
                 <h2>Veggies Are Forever</h2>
@@ -199,7 +206,7 @@
                 </button>
               </div>
               <div class="img">
-                <img src="./img 2.png" alt="Carrot" />
+                <img src="./Photo/img 2.png" alt="Carrot" />
               </div>
               <div class="verity-ditails">
                 <h2>Good For Your Skin</h2>
@@ -218,7 +225,7 @@
                 </button>
               </div>
               <div class="img">
-                <img src="./img 3.png" alt="Carrot" />
+                <img src="./Photo/img 3.png" alt="Carrot" />
               </div>
               <div class="verity-ditails">
                 <h2>That Comes Close</h2>
@@ -229,7 +236,7 @@
                 </button>
               </div>
               <div class="img">
-                <img src="./img 4.png" alt="Carrot" />
+                <img src="./Photo/img 4.png" alt="Carrot" />
               </div>
             </div>
           </div>
@@ -244,7 +251,7 @@
           <h2>Most Popular Product</h2>
           <div class="product-card">
             <div class="card mr-30">
-              <img src="./Banana.png" alt="banana" />
+              <img src="./Photo/Banana.png" alt="banana" />
               <div class="star pb-24">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -263,7 +270,7 @@
               </button>
             </div>
             <div class="card mr-30">
-              <img src="./gereiani.png" alt="banana" />
+              <img src="./Photo/gereiani.png" alt="banana" />
               <div class="star pb-24">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -282,7 +289,7 @@
               </button>
             </div>
             <div class="card mr-30">
-              <img src="./Fresh2.png" alt="banana" />
+              <img src="./Photo/Fresh2.png" alt="banana" />
               <div class="star pb-24">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -301,7 +308,7 @@
               </button>
             </div>
             <div class="card">
-              <img src="./Fresh.png" alt="banana" />
+              <img src="./Photo/Fresh.png" alt="banana" />
               <div class="star pb-24">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
